tests/negative/gold/prefixed-assign3b-test.gold
tests/negative/prefixed-assign3b-test.toit:8:6: error: Can't assign to class 'A'
  pa.A = 3
     ^
Compilation failed
